--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <script defer src="script.js"></script>
 <head>
 <body>
-    <div class="bubble">
+    <div class="buttons">
         <button>Rock</button>
         <button>Paper</button>
         <button>Scissors</button>
+    </div>
+    <div class="result">
+
     </div>
 </body>
 </html>
