Keep score until someone has 5 and play again

--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
         <button>Paper</button>
         <button>Scissors</button>
     </div>
+
     <div class="result">
 
     </div>
+
+    <div class="score">
+        <p>Score: </p>
+        <p class="player">0</p>
+        <p> - </p>
+        <p class="computer">0</p>
+    </div>
+
+    <div class="winner"></div>
 </body>
 </html>
