--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script defer src="script.js"></script>
+    <link rel="stylesheet" href="styles.css">
 <head>
 <body>
-    <div class="buttons">
-        <button>Rock</button>
-        <button>Paper</button>
-        <button>Scissors</button>
+    <div class="container">
+        <div class="buttons">
+            <button>Rock</button>
+            <button>Paper</button>
+            <button>Scissors</button>
+        </div>
+        
+        <div class="result">Start the game by choosing your weapon!</div>
+
+        <div class="score">
+            <p class="player">0</p>
+            <p> - </p>
+            <p class="computer">0</p>
+        </div>
+    
+        <div class="winner"></div>
     </div>
-
-    <div class="result">
-
-    </div>
-
-    <div class="score">
-        <p>Score: </p>
-        <p class="player">0</p>
-        <p> - </p>
-        <p class="computer">0</p>
-    </div>
-
-    <div class="winner"></div>
 </body>
 </html>
