Add header and footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="styles.css">
 <head>
 <body>
+    <header>
+        <p>Made by <a href="https://github.com/plakill" target="_blank">me</a></p>
+    </header>
     <div class="container">
         <div class="result">Start the game by choosing your weapon!</div>
         
@@ -25,5 +28,9 @@
     
         <div class="winner"></div>
     </div>
+
+    <footer>
+        <p>Made for <a href="https://theodinproject.com" target="_blank"> The Odin Project</a></p>
+    </footer>
 </body>
 </html>
