Make buttons emoji and add nice style

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div class="result">Start the game by choosing your weapon!</div>
         
         <div class="buttons">
-            <button>Rock</button>
-            <button>Paper</button>
-            <button>Scissors</button>
+            <button class="rock">&#129704;</button>
+            <button class="paper">&#128195;</button>
+            <button class="scissors">&#9986;</button>
         </div>
         
         <div class="score">
